# bacon-rajan-cc

./: .gitignore  .travis.yml  COPYRIGHT  Cargo.toml  README.md  index.html  rustfmt.toml  save-docs.sh  search-index.js
.github/workflows/: rust.yml
bacon_rajan_cc/: fn.get_mut.html  fn.is_unique.html  fn.strong_count.html  fn.try_unwrap.html  fn.weak_count.html  index.html  sidebar-items.js  struct.Cc.html  struct.Weak.html
bacon_rajan_cc/cc_box_ptr/: sidebar-items.js
bacon_rajan_cc/collect/: fn.collect_cycles.html  fn.number_of_roots_buffered.html  index.html  sidebar-items.js
bacon_rajan_cc/trace/: index.html  sidebar-items.js  trait.Trace.html  type.Tracer.html
derive/: Cargo.toml  lib.rs
examples/: cyclical_list.rs
implementors/bacon_rajan_cc/trace/: trait.Trace.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Pointer.js
implementors/core/hash/: trait.Hash.js
implementors/core/ops/: trait.Deref.js  trait.Drop.js
src/: cc_box_ptr.rs  collect.rs  lib.rs  trace.rs  trace_plugin.rs
src/bacon_rajan_cc/: cc_box_ptr.rs.html  collect.rs.html  lib.rs.html  trace.rs.html
tests/: simple_plugin_test.rs
