[package]
name = "bacon_rajan_cc"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]

license = "MIT/Apache-2.0"

repository="https://github.com/fitzgen/bacon-rajan-cc"
documentation="https://fitzgen.github.io/bacon-rajan-cc/bacon_rajan_cc/index.html"

readme="README.md"

keywords=["cc", "gc", "rc", "memory", "collect", "collection", "cycle", "trace",
          "tracing", "mark", "sweep", "scan", "garbage"]

[lib]
name = "bacon_rajan_cc"

[dependencies]
