[package]
name = "bacon_rajan_cc"
version = "0.2.4"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]

description = "A reference counted type with cycle collection."

license = "MIT/Apache-2.0"

repository="https://github.com/fitzgen/bacon-rajan-cc"
documentation="https://docs.rs/crate/bacon_rajan_cc/"

readme="README.md"

keywords=["cc", "gc", "mark", "sweep", "garbage"]

[lib]
name = "bacon_rajan_cc"

[dependencies]
